# RMdemo

./: .gitignore  CMakeLists.txt  README.md
doc/: framework_CN.md
include/: control_model.h  robot_model.h  serial_listen_thread.h
libBase/: CMakeLists.txt
libBase/include/: base_thread.h  basic_tool.h  image_tool.h
libBase/src/: base_thread.cpp  basic_tool.cpp  image_tool.cpp
libHardWare/: CMakeLists.txt
libHardWare/serialPort/: CMakeLists.txt  README.md
libHardWare/serialPort/include/: serial_interface.h  serial_packet.h  serial_port.h  serial_port_debug.h
libHardWare/serialPort/src/: serial_interface.cpp  serial_packet.cpp  serial_port.cpp  serial_port_debug.cpp
libHardWare/usbCapture/: CMakeLists.txt  README.md
libHardWare/usbCapture/include/: usb_capture_with_thread.h
libHardWare/usbCapture/src/: usb_capture.cpp  usb_capture_with_opencv.cpp  usb_capture_with_thread.cpp
res/: main_config.yaml
src/: control_model.cpp  main.cpp  robot_model.cpp  serial_listen_thread.cpp
